# hotelsim

./: .gitignore  Cargo.toml  README.md
demos/: README.md
demos/fantasy_shop/: README.md
demos/hotelsim/: README.md  STAGING_SCENARIOS.md  hotel.py  main.py  pyproject.toml
demos/hotelsim/prompts/: main.txt
demos/hotelsim/static/: index.html
demos/npc_3d_game/static/src/network/: VoiceClient.js
demos/restaurant_ordering/: README.md
demos/restaurant_ordering/static/: index.html
demos/simple_chat/: README.md
demos/ticatag/: .env.example  README.md  config.yaml.example  jira_client.py  main.py  pyproject.toml
demos/ticatag/prompts/: main.txt
demos/ticatag/static/: index.html  logo.avif
gradbot_lib/src/: llm.rs  speech_to_text.rs  text_to_speech.rs
gradbot_py/: README.md  pyproject.toml
gradbot_py/gradbot/: config.py  websocket.py
gradbot_py/src/: lib.rs
scripts/: run-with-secrets.sh
