[project]
name = "ticatag"
version = "0.1.0"
description = "Ticatag IT Support voice agent — French inbound IT helpdesk that creates Jira tickets"
requires-python = ">=3.12"
dependencies = [
    "gradbot",
    "httpx>=0.27",
]

[tool.uv.sources]
gradbot = { path = "../../gradbot_py", editable = true }
